--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/var/www/admin_totalcom/
+      - .:/admincom
     ports:
       - 8000:8000
     environment:
