--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,11 +14,11 @@ server {
     }
 
     location /staticfiles/ {
-        alias /usr/src/app/static/;
+        alias /var/www/admin_totalcom/static/;
     }
 
     location /mediafiles/ {
-        alias /usr/src/app/media/;
+        alias /var/www/admin_totalcom/media/;
     }
 
 }
